--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title data-l10n-id="title">Logo Interpreter</title>
+<title data-l10n-id="title">Hindawi Logo</title>
 <meta charset="utf-8">
 
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0, width=device-width">
@@ -25,7 +25,8 @@
 <body class="single">
 
 <div id="topbar" class="panel">
-  <h1 data-l10n-id="tl-title">Logo Interpreter</h1>
+  <h2 data-l10n-id="tl-title">Hindawi Logo</h2><br>
+  <h3>Based on JS Logo</h3>
   <p id="topbar-links">
     <a data-l10n-id="tl-tests" target="_blank" href="tests.html?noglobals">Tests</a>
     | <a data-l10n-id="tl-source" target="_blank" href="https://github.com/inexorabletash/jslogo">Source</a>
