--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="single">
 
 <div id="topbar" class="panel">
-  <h2 data-l10n-id="tl-title">Hindawi Logo</h2><br>
+  <h1 data-l10n-id="tl-title">Hindawi Logo</h1>
   <h3>Based on JS Logo</h3>
   <p id="topbar-links">
     <a data-l10n-id="tl-tests" target="_blank" href="tests.html?noglobals">Tests</a>
